[package]
name = "wavelet-integration"
version = "0.1.0"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.2.3"
num-traits = "0.2.8"
rand = "0.7.2"
plotlib = {git = "https://github.com/milliams/plotlib.git", branch = "master"}